[package]
name = "cch23-christophe00"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.2", features = ["json", "multipart", "macros"] }
axum-extra = { version = "0.9", features = ["cookie"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
shuttle-axum = { version = "0.35.0", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.35.0"
tokio = "1.28.2"
tracing = "0.1.40"
base64 = "0.21.5"
eyre = "0.6.9"
reqwest = { version = "0.11.22", features = ["json"] }
tower-http = { version = "0.5.0", features = ["fs"] }
bytes = "1.5.0"
image = "0.24.7"


